[gd_scene load_steps=2 format=3 uid="uid://df4a61blouwrl"]

[ext_resource type="Script" path="res://SettingsMenu.gd" id="1"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Panel" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(150, 210)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -91.5
offset_top = -110.5
offset_right = 91.5
offset_bottom = 110.5
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Panel"]
custom_minimum_size = Vector2(155, 150)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.0
offset_top = -103.0
offset_right = 85.0
offset_bottom = 103.0
grow_horizontal = 2
grow_vertical = 2

[node name="ShowChannelButton" type="Button" parent="Panel/Panel/VBoxContainer"]
layout_mode = 2
text = "Channel Settings"

[node name="CommandsButton" type="Button" parent="Panel/Panel/VBoxContainer"]
layout_mode = 2
text = "Text Commands"

[node name="SoundCommandsButton" type="Button" parent="Panel/Panel/VBoxContainer"]
layout_mode = 2
text = "Sound Commands"

[node name="ConnectionContainer" type="HBoxContainer" parent="Panel/Panel/VBoxContainer"]
layout_mode = 2

[node name="DisconnectButton" type="Button" parent="Panel/Panel/VBoxContainer/ConnectionContainer"]
layout_mode = 2
text = "Disconnect"

[node name="ConnectButton" type="Button" parent="Panel/Panel/VBoxContainer/ConnectionContainer"]
layout_mode = 2
text = "Connect"

[node name="CreditsButton" type="Button" parent="Panel/Panel/VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="CloseButton" type="Button" parent="Panel/Panel/VBoxContainer"]
layout_mode = 2
text = "Close Settings"
